--- a/src/components/ResourceCard/ResourceCard.scss
+++ b/src/components/ResourceCard/ResourceCard.scss
@@ -1,26 +1,30 @@
-@import url("https://fonts.googleapis.com/css?family=Lato:300,400|Poppins:300,400,800&display=swap");
+@import url('https://fonts.googleapis.com/css?family=Lato:300,400|Poppins:300,400,800&display=swap');
+
+* {
+  margin: 0px;
+  padding: 0;
+}
 
 body {
-  font-family: "Poppins";
-  overflow: hidden;
+  font-family: 'Poppins';
+   overflow: hidden;
 }
 
 .container {
   width: 100%;
-  height: 300px;
-  background-color: #232323;
+  height: 450px;
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 10rem 0;
 
   .post {
-    width: 350px;
-    height: 500px;
+    width: 300px;
+    height: 450px;
     display: flex;
-    overflow: hidden;
+     overflow: hidden;
     flex-direction: column;
     position: relative;
+
 
     &:hover {
       .header_post {
@@ -28,18 +32,19 @@ body {
       }
 
       .body_post {
-        height: 50%;
+        height: 70%;
       }
+       
 
-      img {
-        transform: translatey(-10px) translatex(-5px) scale(1.05);
-      }
+       img {
+          transform: translatey(-10px) translatex(-5px) scale(1.5)
+
+       }
     }
 
     .header_post {
       width: 100%;
-      height: 40%;
-      background: #ddd;
+      height: -10%;
       position: absolute;
       top: 0;
       -webkit-transition: cubic-bezier(0.68, -0.55, 0.27, 01.55) 320ms;
@@ -71,6 +76,7 @@ body {
       transition: cubic-bezier(0.68, -0.55, 0.27, 01.55) 320ms;
       cursor: pointer;
 
+
       .post_content {
         width: 80%;
         height: 80%;
@@ -93,7 +99,7 @@ body {
           justify-content: space-between;
           position: absolute;
           bottom: 0;
-          border-top: 1px solid rgba(160, 25, 25, 0.2);
+          border-top: 1px solid rgba(0, 0, 0, .2);
           padding-top: 25px;
 
           .postedBy {
@@ -144,23 +150,21 @@ body {
                   }
 
                   &:before {
-                    content: "";
+                    content: '';
                     text-align: center;
                     width: 100%;
                     height: 5px;
-                    background: #fc6042;
+                    background: #FC6042;
                     opacity: 0.5;
                     position: absolute;
                     bottom: 0;
                     z-index: -1;
                     padding: 0px 1px;
-                    -webkit-transition: cubic-bezier(0.68, -0.55, 0.27, 01.55)
-                      320ms;
-                    -moz-transition: cubic-bezier(0.68, -0.55, 0.27, 01.55)
-                      320ms;
-                    -ms-transition: cubic-bezier(0.68, -0.55, 0.27, 01.55) 320ms;
-                    -o-transition: cubic-bezier(0.68, -0.55, 0.27, 01.55) 320ms;
-                    transition: cubic-bezier(0.68, -0.55, 0.27, 01.55) 320ms;
+      -webkit-transition: cubic-bezier(0.68, -0.55, 0.27, 01.55) 320ms;
+      -moz-transition: cubic-bezier(0.68, -0.55, 0.27, 01.55) 320ms;
+      -ms-transition: cubic-bezier(0.68, -0.55, 0.27, 01.55) 320ms;
+      -o-transition: cubic-bezier(0.68, -0.55, 0.27, 01.55) 320ms;
+      transition: cubic-bezier(0.68, -0.55, 0.27, 01.55) 320ms;
                   }
 
                   &:hover:before {
@@ -176,25 +180,27 @@ body {
   }
 }
 
+
+
 footer {
   width: 350px;
-  height: 80px;
-  background: #17a16f;
+  height: 40px;
+  background: #17A16F;
   position: absolute;
   right: 0;
   bottom: -80px;
   display: flex;
   justify-content: center;
   align-items: center;
-  animation: top 0.8s forwards;
-
+   animation: top 0.8s forwards;
+   
   span {
     display: flex;
     align-items: center;
     justify-content: center;
     font-size: 12px;
     color: #fff;
-    font-family: "Poppins";
+    font-family: 'Poppins';
 
     i {
       margin-right: 25px;
@@ -209,25 +215,27 @@ footer {
 @keyframes top {
   0% {
     opacity: 0;
-    bottom: -80px;
+     bottom: -80px
   }
   100% {
     opacity: 1;
-    bottom: 0px;
+     bottom: 0px
+
   }
 }
 
 @keyframes icon {
   0% {
     opacity: 0;
-    transform: scale(0);
+     transform: scale(0.0);
   }
-  50% {
-    opacity: 1;
-    transform: scale(1.3) rotate(-02deg);
-  }
+   50% {
+      opacity: 1;
+     transform: scale(1.3) rotate(-02deg);
+      
+   }
   100% {
     opacity: 1;
-    bottom: 0px;
+     bottom: 0px;
   }
 }
